--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,18 @@
   "description": "graduate project",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "Cloud0x9",
   "license": "ISC",
   "dependencies": {
     "eslint": "^7.5.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "dotenv": "^8.2.0",
+    "mongoose": "^5.9.25"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
