--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
 node_modules/
-.expo/*
-npm-debug.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
+server/.env
 
-# macOS
-.DS_Store
