--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,10 @@
   "author": "Cloud0x9",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.5.0",
     "express": "^4.17.1",
-    "dotenv": "^8.2.0",
     "mongoose": "^5.9.25"
   },
   "devDependencies": {
