--- a/client/package.json
+++ b/client/package.json
@@ -21,5 +21,6 @@
     "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0"
   },
-  "private": true
+  "private": true,
+  "proxy": "http://localhost:3000"
 }
