--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "babel-preset-expo": "~8.1.0",
+    "eslint-plugin-react": "^7.20.3"
   },
   "private": true,
   "proxy": "http://localhost:3000"
