creating user with facebook login and signing in when already exists

--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,5 @@
     "babel-preset-expo": "~8.1.0",
     "eslint-plugin-react": "^7.20.3"
   },
-  "private": true,
-  "proxy": "http://localhost:3000"
+  "private": true
 }
