--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.1.0",
+    "@expo-google-fonts/love-ya-like-a-sister": "^0.1.0",
     "@expo/vector-icons": "^10.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.3",
@@ -17,6 +19,7 @@
     "dotenv": "^8.2.0",
     "expo": "~38.0.8",
     "expo-facebook": "~8.2.1",
+    "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
