--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@expo-google-fonts/inter": "^0.1.0",
     "@expo-google-fonts/love-ya-like-a-sister": "^0.1.0",
     "@expo/vector-icons": "^10.2.0",
+    "@react-native-community/datetimepicker": "^2.6.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.3",
     "@react-navigation/drawer": "^5.8.6",
